# oracle-database-socks5

./: .env.example  .gitignore  BACKLOG.md  DEMO.md  DEPLOY.md  README.md  manage.py  pyproject.toml
ansible/: inventory.ini.example  socks5.yml
ansible/roles/socks5/defaults/: main.yml
ansible/roles/socks5/handlers/: main.yml
ansible/roles/socks5/tasks/: main.yml
ansible/roles/socks5/templates/: danted.conf.j2  sockd.conf.j2
app/: build.gradle  settings.gradle
app/src/main/java/com/example/socks5poc/: App.java
app/src/main/java/com/example/socks5poc/config/: AppProperties.java  DataSourceConfig.java
app/src/main/java/com/example/socks5poc/health/: DatabaseHealthIndicator.java
app/src/main/resources/: application.yml
app/src/test/java/com/example/socks5poc/health/: DatabaseHealthIndicatorTest.java
docs/: scenarios.md
docs/superpowers/plans/: 2026-06-19-oracle-socks5-jdbc-poc.md
infra/terraform/: artifacts.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf  wallet.tf
infra/terraform/modules/adb/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/bastion/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/jumphost/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/jumphost/userdata/: bootstrap.tftpl
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
socks5_poc_manage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py
